some test codes

--- a/package.json
+++ b/package.json
@@ -11,8 +11,12 @@
     "@react-native-community/masked-view": "0.1.10",
     "@react-navigation/native": "^5.9.2",
     "@react-navigation/stack": "^5.10.0",
+    "aws-sdk": "^2.842.0",
+    "babel-plugin-inline-dotenv": "^1.6.0",
+    "babel-plugin-transform-inline-environment-variables": "^0.4.3",
     "expo": "~39.0.2",
     "expo-av": "~8.6.0",
+    "expo-constants": "~9.2.0",
     "expo-document-picker": "~8.4.0",
     "expo-status-bar": "~1.0.2",
     "react": "16.13.1",
